src/test/ui/const-generics/incorrect-number-of-const-args.full.stderr
error[E0107]: this function takes 2 const arguments but only 1 const argument was supplied
  --> $DIR/incorrect-number-of-const-args.rs:11:5
   |
LL |     foo::<0>();
   |     ^^^   - supplied 1 const argument
   |     |
   |     expected 2 const arguments
   |
note: function defined here, with 2 const parameters: `X`, `Y`
  --> $DIR/incorrect-number-of-const-args.rs:6:4
   |
LL | fn foo<const X: usize, const Y: usize>() -> usize {
   |    ^^^       -               -
help: add missing const argument
   |
LL |     foo::<0, Y>();
   |            ^^^

error[E0107]: this function takes 2 const arguments but 3 const arguments were supplied
  --> $DIR/incorrect-number-of-const-args.rs:14:5
   |
LL |     foo::<0, 0, 0>();
   |     ^^^       --- help: remove this const argument
   |     |
   |     expected 2 const arguments
   |
note: function defined here, with 2 const parameters: `X`, `Y`
  --> $DIR/incorrect-number-of-const-args.rs:6:4
   |
LL | fn foo<const X: usize, const Y: usize>() -> usize {
   |    ^^^       -               -

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0107`.
